# time-resolved-nr

./: .gitignore  LICENSE  README.md  play_env.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: python-test.yml
data/: 189228-err.json  189228-expt.json  189228-v2-expt.json  189228-v2-problem.json  189236-bayes-backward.json  189236-bayes-forward.json  189236-bayes-fwd-apr24.json  189236-bayes-fwd-super-no-bayes.json  189236-bayes-fwd-super.json  189237-err.json  189237-expt.json  189237-v2-expt.json  189237-v2-problem.json  189245-bayes-forward.json  189245-bayes-fwd-apr24.json  189246-err.json  189246-expt.json  189246-v2-expt.json  189246-v2-problem.json  REFL_189228_combined_data_auto.txt  REFL_189237_combined_data_auto.txt  REFL_189246_combined_data_auto.txt  REFL_207268_combined_data_auto.txt  REFL_207282_combined_data_auto.txt  r189236-time-resolved.json  r189236-time-resolved.npy  r189245-time-resolved.json  r189245-time-resolved.npy  r189245-time-resolved_times.npy
docs/: developer_notes.md
examples/: README.md
notebooks/: RL-01-to-06-mixing.ipynb  RL-01-to-06.ipynb  RL.ipynb  steady-state-training-view.ipynb  steady-state.ipynb  training_view.ipynb  weird-error-bands.ipynb
src/: _version.py  model_utils.py  rl_model.py  steady_state.py
src/fitting/: bayes_experiment.py  fit_uncertainties.py  (+1 more)
tests/: __init__.py  fixtures.py  test_cli.py  test_integration.py  test_model_utils.py  test_plotting.py  test_rl_model.py  test_workflow.py
timeref/: _version.py  cli.py  model_utils.py  rl_model.py  workflow.py
(+4 files in other folders)
